Added placeholders and divs on about page

--- a/stylesheets/about.css
+++ b/stylesheets/about.css
@@ -5,4 +5,28 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  /* flex-direction: column; */
 }
+.about-left-side{
+  width: 50%;
+}
+.about-right-side{
+  width:50%;
+
+}
+/* .about-left-image{
+  height: 50%;
+  width: 50%;
+}
+.about-right-text{
+  height: 50%;
+  width: 50%;
+}
+.about-left-text{
+  height: 50%;
+  width: 50%;
+}
+.about-right-image{
+  height: 50%;
+  width: 50%;
+} */
