--- a/stylesheets/about.css
+++ b/stylesheets/about.css
@@ -8,9 +8,17 @@
   /* flex-direction: column; */
 }
 .about-left-side{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   width: 50%;
 }
 .about-right-side{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   width:50%;
 
 }
