--- a/stylesheets/navbar.css
+++ b/stylesheets/navbar.css
@@ -8,9 +8,17 @@
   width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
   list-style-type: none;
   align-items: center;
+  }
+
+  .navbar-left a {
+  margin-left: 3em;
+  }
+
+  .navbar-right a {
+  margin-right: 3em;
   }
 
 .navbar a {
