--- a/stylesheets/firstpage.css
+++ b/stylesheets/firstpage.css
@@ -2,5 +2,18 @@
   height: 100vh;
   width: 100%;
   background-color: blue;
-  background-image: url("image/firstpage.jpg");
   }
+
+  .first-page img {
+    width: 100%;
+    height: 100%;
+  }
+
+  .title {
+    color: #393939;
+    font-weight: 200;
+    font-size: 96px;
+    position: absolute;
+    top: 0.5em;
+    left: 4.5em;
+     }
