--- a/stylesheets/about.css
+++ b/stylesheets/about.css
@@ -2,26 +2,28 @@
   width: 100%;
   height: 100vh;
   background-color: hotpink;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  /* flex-direction: column; */
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
 }
-.about-left-side{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  width: 50%;
+.about-left-image{
+  background-image: url("../image/hand.jpg");
+  grid-row: 1/2;
+  grid-column: 1/2;
 }
-.about-right-side{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  width:50%;
+.about-left-text{
+  grid-row: 2/3;
+  grid-column: 1/2;
+}
+.about-right-image{
+  grid-row: 2/3;
+  grid-column: 2/3;
+}
+.about-right-text{
+  grid-row: 1/2;
+  grid-column: 2/3;
+}
 
-}
 /* .about-left-image{
   height: 50%;
   width: 50%;
