--- a/stylesheets/about.css
+++ b/stylesheets/about.css
@@ -1,7 +1,7 @@
 .about{
   width: 100%;
   height: 100vh;
-  background-color: hotpink;
+  background-color: #333;
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
@@ -12,14 +12,17 @@
   grid-column: 1/2;
 }
 .about-left-text{
+  color:white;
   grid-row: 2/3;
   grid-column: 1/2;
 }
 .about-right-image{
+  background-image: url("../image/coffee.jpg");
   grid-row: 2/3;
   grid-column: 2/3;
 }
 .about-right-text{
+  color:white;
   grid-row: 1/2;
   grid-column: 2/3;
 }
