--- a/stylesheets/navbar.css
+++ b/stylesheets/navbar.css
@@ -28,3 +28,26 @@
   font-size: 24px;
   font-weight: 300;
   }
+
+  .progress-container {
+    display: flex;
+    width: 100%;
+    height: 5px;
+    background: #272727;
+    position: fixed;
+    top: 0;
+    z-index: 1;
+    width: 100%;
+  }
+
+  .progress-bar {
+    height: 5px;
+    background: lightgray;
+    width: 0%;
+  }
+
+  .content {
+    padding: 100px 0;
+    margin: 50px auto 0 auto;
+    width: 80%;
+  }
