Adjusted the titel text to center of screen

--- a/stylesheets/firstpage.css
+++ b/stylesheets/firstpage.css
@@ -12,8 +12,11 @@
   .title {
     color: #393939;
     font-weight: 200;
-    font-size: 96px;
+    font-size: 64px;
     position: absolute;
-    top: 0.5em;
-    left: 4.5em;
+    top: 1em;
+    width:100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
      }
