--- a/stylesheets/about.css
+++ b/stylesheets/about.css
@@ -8,6 +8,8 @@
 }
 .about-left-image{
   background-image: url("../image/hand.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
   grid-row: 1/2;
   grid-column: 1/2;
 }
@@ -17,7 +19,9 @@
   grid-column: 1/2;
 }
 .about-right-image{
-  background-image: url("../image/coffee.jpg");
+  background-image:url("../image/coffee.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
   grid-row: 2/3;
   grid-column: 2/3;
 }
@@ -26,20 +30,3 @@
   grid-row: 1/2;
   grid-column: 2/3;
 }
-
-/* .about-left-image{
-  height: 50%;
-  width: 50%;
-}
-.about-right-text{
-  height: 50%;
-  width: 50%;
-}
-.about-left-text{
-  height: 50%;
-  width: 50%;
-}
-.about-right-image{
-  height: 50%;
-  width: 50%;
-} */
