--- a/stylesheets/about.css
+++ b/stylesheets/about.css
@@ -17,6 +17,21 @@
   color:white;
   grid-row: 2/3;
   grid-column: 1/2;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+.about-left-text h1{
+  display: flex;
+  justify-content: center;
+  font-weight: 200;
+}
+.about-left-text p{
+  display: flex;
+  justify-content: center;
+  font-weight: 200;
 }
 .about-right-image{
   background-image:url("../image/coffee.jpg");
@@ -29,4 +44,21 @@
   color:white;
   grid-row: 1/2;
   grid-column: 2/3;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+.about-right-text h1{
+  display: flex;
+  justify-content: center;
+  font-weight: 200;
+
+}
+.about-right-text p{
+  display: flex;
+  justify-content: center;
+  font-weight: 200;
+
 }
