--- a/stylesheets/about.css
+++ b/stylesheets/about.css
@@ -49,6 +49,7 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
+  padding: 10%;
 }
 .about-right-text h1{
   display: flex;
