Adjusted about page divs and text, also pushed buy buttons up

--- a/stylesheets/product.css
+++ b/stylesheets/product.css
@@ -61,6 +61,8 @@
   font-size: 18px;
   cursor: pointer;
   border-radius: 25px;
+  margin-bottom: 5%;
+  border:none;
 }
 
 .buy-black:hover, .buy-white:hover {
