--- a/stylesheets/about.css
+++ b/stylesheets/about.css
@@ -5,6 +5,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
+
 }
 .about-left-image{
   background-image: url("../image/hand.jpg");
@@ -12,9 +13,11 @@
   background-size: 100% 100%;
   grid-row: 1/2;
   grid-column: 1/2;
+  border-left: 25px solid #F2F2F2;
+  border-top: 25px solid #F2F2F2;
 }
 .about-left-text{
-  color:white;
+  color:#F2F2F2;
   grid-row: 2/3;
   grid-column: 1/2;
   width: 100%;
@@ -22,8 +25,13 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
+  padding: 10%;
+  border-left: 25px solid #F2F2F2;
+  border-top: 25px solid #F2F2F2;
+  border-bottom: 25px solid #F2F2F2;
 }
 .about-left-text h1{
+  margin-bottom: 5%;
   display: flex;
   justify-content: center;
   font-weight: 200;
@@ -31,6 +39,7 @@
 .about-left-text p{
   display: flex;
   justify-content: center;
+  font-size: 18px;
   font-weight: 200;
 }
 .about-right-image{
@@ -39,9 +48,12 @@
   background-size: 100% 100%;
   grid-row: 2/3;
   grid-column: 2/3;
+  border-right: 25px solid #F2F2F2;
+  border-top: 25px solid #F2F2F2;
+  border-bottom: 25px solid #F2F2F2;
 }
 .about-right-text{
-  color:white;
+  color:#F2F2F2;
   grid-row: 1/2;
   grid-column: 2/3;
   width: 100%;
@@ -50,8 +62,11 @@
   justify-content: center;
   flex-direction: column;
   padding: 10%;
+  border-right: 25px solid #F2F2F2;
+  border-top: 25px solid #F2F2F2;
 }
 .about-right-text h1{
+  margin-bottom: 5%;
   display: flex;
   justify-content: center;
   font-weight: 200;
@@ -60,6 +75,7 @@
 .about-right-text p{
   display: flex;
   justify-content: center;
+  font-size: 18px;
   font-weight: 200;
 
 }
