--- a/stylesheets/product.css
+++ b/stylesheets/product.css
@@ -33,12 +33,12 @@
   width: 60%;
   height: 60%;
   align-items: center;
-  margin: 5%;
+  margin: 2%;
 }
 
 .text-white, .text-black {
   width: 50%;
-  height: 20%;
+  height: 15%;
   text-align: center;
   color: #FFFFFF;
   font-weight: 300;
@@ -54,14 +54,14 @@
 }
 
 .buy-black, .buy-white {
-  height: 48px;
+  height: 44px;
   width: 200px;
   background-color: #FFFFFF;
   color: #000000;
   font-size: 18px;
   cursor: pointer;
   border-radius: 25px;
-  margin-bottom: 5%;
+  margin-top: 2em;
   border:none;
 }
 
