--- a/stylesheets/firstpage.css
+++ b/stylesheets/firstpage.css
@@ -1,22 +1,14 @@
 .first-page {
   height: 100vh;
-  width: 100%;
-  background-color: blue;
-  }
-
-  .first-page img {
-    width: 100%;
-    height: 100%;
-  }
+  background-image: url("../image/firstpage.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+    }
 
   .title {
-    color: #393939;
-    font-weight: 200;
-    font-size: 64px;
-    position: absolute;
-    top: 1em;
-    width:100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-     }
+      color: #393939;
+      font-weight: 200;
+      font-size: 64px;
+      padding-top: 5%;
+      text-align: center;
+       }
