--- a/stylesheets/navbar.css
+++ b/stylesheets/navbar.css
@@ -1,4 +1,4 @@
-.navbar {
+/* .navbar {
   height: 8vh;
   background-color: #272727;
   overflow: hidden;
@@ -58,4 +58,90 @@
     padding: 100px 0;
     margin: 50px auto 0 auto;
     width: 80%;
-  }
+  } */
+
+  /*navbar*/
+    .navbar {
+              font-size: 16px;
+              font-weight: 300;
+              position: fixed;
+              width: 100%;
+              background-color: #272727;
+              /* border: 1px solid rgba(0, 0, 0, 0.2); */
+              padding-bottom: 10px;
+          }
+
+          .main-nav {
+              list-style-type: none;
+              display: none;
+          }
+
+          .nav-links,
+          .logo {
+              text-decoration: none;
+              color: white;
+          }
+
+          .main-nav li {
+              text-align: center;
+              margin: 15px auto;
+          }
+
+          .logo {
+              display: inline-block;
+              font-weight: 300;
+              font-size: 22px;
+              margin-top: 10px;
+              margin-left: 20px;
+          }
+
+          .navbar-toggle {
+              position: absolute;
+              top: 10px;
+              right: 20px;
+              cursor: pointer;
+              color: white;
+              font-size: 24px;
+          }
+
+          .active {
+              display: block;
+          }
+
+          @media screen and (min-width: 768px) {
+              .navbar {
+                  display: flex;
+                  justify-content: space-between;
+                  padding-bottom: 0;
+                  height: 70px;
+                  align-items: center;
+              }
+
+              .main-nav {
+                  display: flex;
+                  margin-right: 30px;
+                  flex-direction: row;
+                  justify-content: flex-end;
+              }
+
+              .main-nav li {
+                  margin: 0;
+              }
+
+              .nav-links {
+                  margin-left: 40px;
+              }
+
+              .logo {
+                  margin-top: 0;
+              }
+
+              .navbar-toggle {
+                  display: none;
+              }
+
+              .logo:hover,
+              .nav-links:hover {
+                  color: rgba(255, 255, 255, 1);
+              }
+          }
