--- a/stylesheets/features.css
+++ b/stylesheets/features.css
@@ -1,5 +1,6 @@
 .features {
   height: 100vh;
+  width: inherit;
   background-color: #F2F2F2;
   display: flex;
   flex-direction: column;
@@ -43,4 +44,19 @@
     font-size: 20px;
     font-weight: 300;
     color: #000000;
+      }
+
+      @media only screen and (max-width: 600px) {
+        .features {
+          height: 100vh;
+          display: flex;
+          flex-direction: column;
+        }
+
+        .text-boxes {
+          display: flex;
+          flex-direction: column;
+          flex-wrap: nowrap;
+        }
+
       }
