--- a/stylesheets/navbar.css
+++ b/stylesheets/navbar.css
@@ -65,7 +65,7 @@
               font-size: 16px;
               font-weight: 300;
               position: fixed;
-              width: 100%;
+              width: inherit;
               background-color: #272727;
               /* border: 1px solid rgba(0, 0, 0, 0.2); */
               padding-bottom: 10px;
@@ -108,12 +108,12 @@
               display: block;
           }
 
-          @media screen and (min-width: 768px) {
+          @media screen and (min-width: 700px) {
               .navbar {
                   display: flex;
                   justify-content: space-between;
                   padding-bottom: 0;
-                  height: 70px;
+                  height: 60px;
                   align-items: center;
               }
 
