--- a/stylesheets/about.css
+++ b/stylesheets/about.css
@@ -1,3 +1,9 @@
+/*ABOUT PAGE MOBILE*/
+@media screen and (max-width: 768px) {
+
+}
+/*END ABOUT PAGE MOBILE*/
+
 .about{
   width: 100%;
   height: 140vh;
@@ -7,6 +13,7 @@
   grid-template-rows: 1fr 1fr;
 
 }
+
 .about-left-image{
   background-image: url("../image/hand.jpg");
   background-repeat: no-repeat;
@@ -79,3 +86,52 @@
   font-weight: 200;
 
 }
+
+/*ABOUT PAGE MOBILE*/
+@media screen and (max-width: 768px) {
+  .about-left-image, .about-left-text, .about-right-image, .about-right-text{
+    display: none;
+  }
+  .about{
+    width: 100%;
+    height: 200vh;
+    background-color: #272727;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+  }
+  .about-left-image{
+    display: flex;
+    background-image: url("../image/hand.jpg");
+    background-repeat: none;
+    background-size: contain;
+    width: 100%;
+    height: 100%;
+    border:none;
+  }
+  .about-left-text{
+    display: flex;
+    border:none;
+    padding-top: 0;
+  }
+
+  .about-right-image{
+    display: flex;
+    background-image: url("../image/coffee.jpg");
+    background-repeat: none;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    border:none;
+  }
+  .about-right-text{
+    display: flex;
+    border:none;
+    padding-top: 0;
+  }
+
+
+}
+/*END ABOUT PAGE MOBILE*/
