--- a/stylesheets/product.css
+++ b/stylesheets/product.css
@@ -70,3 +70,44 @@
   background-color: #000000;
   color: #FFFFFF;
 }
+
+@media only screen and (max-width: 700px)  {
+  .products {
+    display: flex;
+    flex-direction: column;
+    width: inherit;
+    height: 130vh;
+  }
+
+    .buy {
+      height: 120vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      }
+
+      .white img, .black img {
+        width: 100%;
+        height: 100%;
+        align-items: center;
+        margin: 2%;
+      }
+
+      .text-white, .text-black {
+        width: 100%;
+        height: 15%;
+        text-align: center;
+        color: #FFFFFF;
+        font-weight: 300;
+      }
+
+      .buy-black, .buy-white {
+        margin-top: 1em;
+        margin-bottom: 1em;
+      }
+
+      .buy-black:hover, .buy-white:hover {
+        background-color: #000000;
+        color: #FFFFFF;
+      }
+}
