--- a/stylesheets/firstpage.css
+++ b/stylesheets/firstpage.css
@@ -18,6 +18,12 @@
 
        @media only screen and (max-width: 600px) {
          .first-page {
+           background-image: url("../image/firstpage.jpg");
+           background-repeat: no-repeat;
+           background-size: cover;
+           background-position: center;
+           display: flex;
+           justify-content: center;
 
            }
 
