--- a/stylesheets/features.css
+++ b/stylesheets/features.css
@@ -80,12 +80,14 @@ justify-content: space-around;
     font-size: 42px;
     font-weight: 200;
     color: #000000;
+    font-size: 28px;
     }
 
   .text-boxes p {
     font-size: 20px;
     font-weight: 300;
     color: #000000;
+    font-size: 18px;
       }
 
 
