--- a/stylesheets/product.css
+++ b/stylesheets/product.css
@@ -42,16 +42,17 @@
   height: 15%;
   text-align: center;
   color: #FFFFFF;
-  font-weight: 300;
-}
+  }
 
 .text-white, .text-black p {
+  font-size: 18px
   text-align: center;
+  font-weight: 300;
 }
 
 .text-white h3, .text-black h3 {
-  font-weight: 300;
-  font-size: 24px;
+  font-weight: 200;
+  font-size: 32px;
 }
 
 .mobile-title {
