--- a/stylesheets/footer.css
+++ b/stylesheets/footer.css
@@ -1,22 +1,70 @@
 .footer {
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   height: 50vh;
   background-color: #272727;
 }
 
-form {
+.email-form{
+  width:100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.submit-button{
+  height: 25%;
+  width: 35%;
+  background-color: #FFFFFF;
+  color: #000000;
+  font-size: 18px;
+  cursor: pointer;
+  border: none;
+  border-radius: 25px;
+  margin: 2%;
+}
+.submit-button:hover{
+  background-color: #000000;
+  color: #FFFFFF;
+}
+
+.social-media{
+  color: #FFFFFF;
+  font-size: 40px;
+  width:30%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 50px;
+
+}
+
+.hr-footer{
+  margin-top: 10px;
+  height: 3px;
+  width: 80%;
+
+}
+ hr {
+  color: white;
+  height: 2px;
+}
+
+/* form {
   height: 70%;
   float: right;
   margin: 5% 5% 0% 0%;
-}
+} */
 
-input[type=text] {
+/* input[type=text] {
   width: 350px;
   margin: 2%;
   height: 48px;
-}
+} */
 
-input[type=submit] {
+/* input[type=submit] {
   height: 48px;
   width: 200px;
   background-color: #FFFFFF;
@@ -27,20 +75,20 @@ input[type=submit] {
   border-radius: 25px;
   margin: 2%;
   float: right;
-}
+} */
 
-input[type=submit]:hover {
+/* input[type=submit]:hover {
   background-color: #000000;
   color: #FFFFFF;
 
-  }
+  } */
 
-  .hr-footer {
+  /* .hr-footer {
     height: 30%;
-  }
+  } */
 
-  hr {
+  /* hr {
     color: white;
     width: 80%;
     margin: auto;
-  }
+  } */
