--- a/stylesheets/footer.css
+++ b/stylesheets/footer.css
@@ -1,3 +1,7 @@
+@media screen and (max-width: 768px) {
+
+
+
 .footer {
   display: flex;
   justify-content: center;
@@ -9,13 +13,14 @@
 
 .email-form{
   width:100%;
+  height: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
 .submit-button{
-  height: 25%;
+  height: 20%;
   width: 35%;
   background-color: #FFFFFF;
   color: #000000;
@@ -25,6 +30,10 @@
   border-radius: 25px;
   margin: 2%;
 }
+.input-field{
+  height:18%;
+  width: 50%;
+}
 .submit-button:hover{
   background-color: #000000;
   color: #FFFFFF;
@@ -32,8 +41,8 @@
 
 .social-media{
   color: #FFFFFF;
-  font-size: 40px;
-  width:30%;
+  font-size: 50px;
+  width:40%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -42,14 +51,15 @@
 }
 
 .hr-footer{
-  margin-top: 10px;
+  margin-top: 10%;
   height: 3px;
-  width: 80%;
+  width: 50%;
 
 }
  hr {
   color: white;
   height: 2px;
+}
 }
 
 /* form {
