--- a/stylesheets/footer.css
+++ b/stylesheets/footer.css
@@ -1,66 +1,129 @@
+
+/* MOBILE FOOTER */
 @media screen and (max-width: 768px) {
 
+  .footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 50vh;
+    background-color: #272727;
+  }
 
+  .email-form{
+    width:100%;
+    height: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  .submit-button{
+    height: 20%;
+    width: 35%;
+    background-color: #FFFFFF;
+    color: #000000;
+    font-size: 18px;
+    cursor: pointer;
+    border: none;
+    border-radius: 25px;
+    margin: 2%;
+  }
+  .submit-button:hover{
+    background-color: #000000;
+    color: #FFFFFF;
+  }
+  .input-field{
+    height:18%;
+    width: 50%;
+  }
+  .social-media{
+    color: #FFFFFF;
+    font-size: 50px;
+    width:40%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 50px;
 
-.footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  height: 50vh;
-  background-color: #272727;
-}
+  }
 
-.email-form{
-  width:100%;
-  height: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-.submit-button{
-  height: 20%;
-  width: 35%;
-  background-color: #FFFFFF;
-  color: #000000;
-  font-size: 18px;
-  cursor: pointer;
-  border: none;
-  border-radius: 25px;
-  margin: 2%;
-}
-.input-field{
-  height:18%;
-  width: 50%;
-}
-.submit-button:hover{
-  background-color: #000000;
-  color: #FFFFFF;
-}
+  .hr-footer{
+    margin-top: 10%;
+    height: 3px;
+    width: 50%;
 
-.social-media{
-  color: #FFFFFF;
-  font-size: 50px;
-  width:40%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 50px;
-
+  }
+   hr {
+    color: white;
+    height: 2px;
+  }
 }
+/* END MOBILE FOOTER */
 
-.hr-footer{
-  margin-top: 10%;
+/* DESKTOP FOOTER */
+@media screen and (min-width: 768px) {
+  .hr-footer, hr {
+    display: none;
+  }
+
+  .footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row-reverse;
+    height: 30vh;
+    background-color: #272727;
+  }
+
+  .email-form{
+    width:50%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    flex-direction: column;
+  }
+  .submit-button{
+    height: 15%;
+    width: 30%;
+    background-color: #FFFFFF;
+    color: #000000;
+    font-size: 18px;
+    cursor: pointer;
+    border: none;
+    border-radius: 25px;
+    margin: 2%;
+  }
+
+  .submit-button:hover{
+    background-color: #000000;
+    color: #FFFFFF;
+  }
+  .input-field{
+    height:15%;
+    width: 40%;
+    margin-top: 2%;
+  }
+  .social-media{
+    color: #FFFFFF;
+    font-size: 50px;
+    width:20%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+/* .hr-footer{
   height: 3px;
   width: 50%;
-
 }
  hr {
   color: white;
   height: 2px;
-}
-}
+} */
+/*END DESKTOP FOOTER */
 
 /* form {
   height: 70%;
